# lairdubois-clippy

./: .gitmodules  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
Clipper2/: CMakeLists.txt
Clipper2/BenchMark/: CMakeLists.txt
dll/: CMakeLists.txt
include/: clippy.h
src/: clipper.export.cpp  clippy.cpp  dllmain.cpp
